# langchain-cockroachdb

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MAKEFILE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/uv_setup/: action.yml
.github/workflows/: _lint.yml  _release.yml  _test.yml  docs.yml  release.yml  test.yml
about/changelog/: index.html
about/license/: index.html
api/chat-history/: index.html
api/engine/: index.html
api/indexes/: index.html
api/vectorstore/: index.html
development/architecture/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: changelog.md  license.md
docs/api/: chat-history.md  engine.md  indexes.md  vectorstore.md
docs/development/: architecture.md  contributing.md  testing.md
docs/examples/: advanced-filtering.md  basic-usage.md  index-optimization.md  index.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: async-vs-sync.md  chat-history.md  hybrid-search.md  vector-indexes.md  vector-store.md
examples/: README.md  chat_history.py  hybrid_search.py  index.html  metadata_filtering.py  quickstart.py  retry_configuration.py  sync_usage.py  vector_indexes.py
examples/advanced-filtering/: index.html
examples/basic-usage/: index.html
examples/index-optimization/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/async-vs-sync/: index.html
guides/chat-history/: index.html
guides/hybrid-search/: index.html
guides/vector-indexes/: index.html
guides/vector-store/: index.html
langchain_cockroachdb/: __init__.py  async_vectorstore.py  chat_message_histories.py  engine.py  hybrid_search_config.py  indexes.py  retry.py  vectorstores.py
search/: search_index.json
tests/: __init__.py  conftest.py
tests/integration/: test_chat_history.py  test_configuration.py  test_engine.py  test_retry_behavior.py  test_sync_wrapper.py  test_vectorstore.py
tests/unit/: test_hybrid_search.py  test_indexes.py  test_retry.py
