[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-cockroachdb"
version = "0.1.0"
description = "LangChain integration for CockroachDB with native vector support"
authors = [{name = "Virag Tripathi", email="virag.tripathi@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["langchain", "cockroachdb", "vector", "embeddings", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "langchain-core>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlalchemy-cockroachdb>=2.0.2",
    "psycopg[binary,pool]>=3.1.0",
    "psycopg2-binary>=2.9.0",  # Required by sqlalchemy-cockroachdb for sync connections
    "greenlet>=3.0.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/viragtripathi/langchain-cockroachdb"
Documentation = "https://viragtripathi.github.io/langchain-cockroachdb/"
Repository = "https://github.com/viragtripathi/langchain-cockroachdb"
Issues = "https://github.com/viragtripathi/langchain-cockroachdb/issues"
Changelog = "https://github.com/viragtripathi/langchain-cockroachdb/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres]>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLR"]
ignore = ["E501", "PLR0913", "PLR2004", "PLR0911"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "^.venv/",
    "^build/",
    "^dist/",
]
